feat: enhance Agile components with new keywords and improve Playwright test patterns